--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -81,17 +81,16 @@
         cursor: pointer;
         
     }
-    .chip {
+    /*.chip {
         background-color: @Dividers;
-    }
-    border-radius: 4px;
-    background-color: @Dividers;
-    font-size: 12px;
-    letter-spacing: -0.2px;
-    color: #4a4a4a;
-    svg {
-        margin-left: 28px;
-        width: 10px;
-        height: 10px;
+    }*/
+    //border-radius: 4px;
+    //background-color: @Dividers;
+    //font-size: 12px;
+    //letter-spacing: -0.2px;
+    //color: #4a4a4a;
+    i {
+        margin: 0 4px 0 16px;
+        font-size:12px;
     }
 }
