--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -28,7 +28,7 @@
     }
 }
 @heightOfTitle : 22px;
-.sort-filter {
+.left-side-bar {
     overflow: auto;
     position: -webkit-sticky;
     position: sticky;
@@ -54,18 +54,7 @@
         line-height: normal;
         height:@heightOfTitle;
     }
-    .add-course {
-        color:@Spitball-Main-color;
-        font-size: 14px;
-        letter-spacing: -0.2px;
-        text-transform: capitalize;
-        svg {
-            fill: @Spitball-Main-color;
-            width: 9px;
-            height: 9px;
-            margin-right:6px;
-        }
-    }
+   
 }
 
 .side-bar {
