Redesign of book detail

--- a/Cloudents.Web/ClientApp/components/results/ResultBookDetail.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultBookDetail.less
@@ -1,10 +1,42 @@
-﻿.book-detail {
+﻿@import "../../mixin.less";
+.book-detail {
     background: #fff;
     border-radius: 4px;
 
-    
+    .price-line {
+        height: 54px;
+        display: block;
 
-    table {
+        > div {
+            height: 100%;
+        }
+
+        .flex {
+            .inTheMiddle();
+        }
+
+        .flex:nth-child(2) {
+            font-size: 14px;
+            letter-spacing: -0.3px;
+            color: #000;
+        }
+
+        .flex:nth-child(3) {
+
+            div {
+                width: 88px;
+                border-radius: 2px;
+                background: #ebbc18;
+                text-align: right;
+                height: 24px;
+                font-size: 16px;
+                letter-spacing: -0.4px;
+                text-align: center;
+                color: #000;
+            }
+        }
+    }
+    /*table {
         width: 100%;
         border-collapse: collapse;
         // box-sizing:border-box;
@@ -42,5 +74,5 @@
     .border-row {
         border-bottom: 1px solid #ddd;
         padding: 5px 0;
-    }
+    }*/
 }
