--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -79,6 +79,7 @@
                 cursor: pointer;
 
                 label {
+                    text-transform: capitalize;
                     margin-left: 6px;
                     line-height: 24px;
                 }
