--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -19,6 +19,7 @@
         letter-spacing: -0.3px;
     }
 }
+
 .h-p {
     &.wrapper {
         width: 100%;
@@ -38,7 +39,6 @@
     .f-submit {
         .flexSameSize();
     }
-   
     //strips
     .strip {
         padding-top: 80px;
@@ -376,55 +376,20 @@
                 }
             }
         }
-
-        .description {
-            padding: 24px 24px;
-
-            @media(max-width: 600px) {
-                padding: 8px 0;
-            }
-
-            .strip-title {
-
-                @media(max-width: 600px) {
-                    justify-content: center;
-                }
-
-                svg {
-                    height: auto;
-                }
-
-                h3 {
-                    font-size: 30px;
-                    margin: 0 0 0 16px;
-
-                    @media(max-width: 600px) {
-                        font-size: 20px;
-                        margin-left: 12px;
-                    }
-                }
-            }
-
-            .strip-text {
-                font-size: 20px;
-                color: #4a4a4a;
-                margin: 16px 0 0 0;
-                max-width: 450px;
-
-                @media(max-width: 600px) {
-                    font-size: 16px;
-                    text-align: center;
-                    margin: 0;
-                }
-            }
-        }
     }
+
+    @submitHeight: 48px;
+    @submitMobileHeight: 40px;
 
     .box-header {
         /*background: @color-blue url("./img/doodels.png") no-repeat 50% 50%;*/
         background-image: linear-gradient(317deg, #3293f6, #3023ae);
         background-size: cover;
         padding-bottom: 24px;
+
+        @media(max-width: 960px) {
+            padding-bottom: 88px;
+        }
 
         .logo-wrapper {
             .flexSameSize();
@@ -437,6 +402,17 @@
             .logo {
                 width: 128px;
                 fill: @color-blue;
+            }
+
+            @media(max-width:600px) {
+                background: none;
+                margin: 2px 0 0 0;
+                align-items: flex-start;
+
+                .logo {
+                    width: 100px;
+                    fill: white;
+                }
             }
         }
 
@@ -465,7 +441,12 @@
                 font-size: 50px;
                 line-height: normal;
                 margin: 113px 0 36px;
-                font-weight: bold;
+                font-weight: 300;
+
+                @media(max-width:600px) {
+                    font-size: 40px;
+                    margin-top: 20px;
+                }
             }
 
             .sub-title {
@@ -480,12 +461,29 @@
         background: rgba(255,255,255, 0.3);
         .rounded-all(4px);
         position: relative;
+        margin: 16px;
+
+        @media(max-width: 600px) {
+            margin: 8px;
+        }
 
         button[type="submit"] {
             border: none;
             display: inline-block;
-            height: 48px;
+            height: @submitHeight;
             font-size: 20px;
+
+            @media(max-width: 600px) {
+                height: @submitMobileHeight;
+            }
+        }
+
+        form .container {
+            padding: 16px;
+
+            @media(max-width: 600px) {
+                padding: 8px;
+            }
         }
 
         .placeholder-color(#5d5d5d);
@@ -496,6 +494,27 @@
             padding: 0 38px 0;
             // width: calc(~'100% - 180px');
         }*/
+        .input-group.input-group--solo {
+            min-height: 40px;
+            height: @submitHeight;
+            border-radius: 4px;
+            box-shadow: none;
+
+            .sbf-mic {
+                color: @color-blue !important;
+            }
+
+            @media(max-width:600px) {
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+                height: @submitMobileHeight;
+
+                .input-group__prepend-icon {
+                    display: none;
+                }
+            }
+        }
+
         input:focus {
             &::-webkit-input-placeholder {
                 color: white;
@@ -515,13 +534,24 @@
         }
 
         button[type="submit"] {
-            background: @color-dark-blue;
-            color: @color-white;
+            background: #302eb5;
             //font-family: @font-bold;
             margin: 0 0 0 20px;
             padding: 0 24px;
             width: 140px;
             .rounded-all(4px);
+
+            i {
+                color: @color-white;
+            }
+
+            @media(max-width: 600px) {
+                margin: 0;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+                width: 40px;
+                padding: 0;
+            }
         }
     }
 
@@ -532,6 +562,7 @@
 
     .websites-section {
         padding: 8px;
+        background-image: linear-gradient(to bottom, #ffffff, rgba(182,215,250,0.5));
 
         .logos {
             padding: 16px 0 32px 0;
@@ -539,10 +570,19 @@
 
         h2 {
             font-size: 28px;
+            font-weight: normal;
+
+            @media(max-width: 600px) {
+                font-size: 20px;
+            }
         }
 
         p {
             font-size: 20px;
+
+            @media(max-width: 600px) {
+                font-size: 16px;
+            }
         }
 
         .site img {
@@ -672,16 +712,28 @@
 
     .testimonials {
         background: @color-light-grey-2;
-        padding: 34px 0;
+        padding: 0;
         text-align: center;
+
+        @media(max-width: 600px) {
+            padding: 0;
+        }
 
         .carousel {
             // height: auto;
             box-shadow: none;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 0;
 
             @media(max-width: 600px) {
-                padding: 16px;
+                padding: 0 16px;
+
+                .carousel__right, .carousel__left {
+                    display: none;
+                }
             }
+
 
             .sbf-arrow-right {
                 color: #bbb !important;
@@ -714,6 +766,7 @@
             }
 
             .uni {
+                margin-left: 4px;
                 font-weight: bold;
             }
         }
@@ -737,8 +790,16 @@
     footer {
         background: @color-grey;
         color: @color-white;
-        margin: 20px 0 0;
-        padding: 56px 0;
+        padding: 24px 0;
+
+        .container {
+            max-width: 1080px;
+        }
+
+        @media(max-width: 600px) {
+            margin: 0;
+            padding: 12px 0;
+        }
 
         a {
             color: @color-white;
@@ -751,68 +812,56 @@
         li {
             list-style: none;
         }
-
-        .container {
-            max-width: 926px;
-        }
     }
 
+
     .box-app {
-        .title {
+        max-width: 460px;
+
+        .footer-title {
             //font-family: @font-bold;
-            font-size: 36px !important;
+            font-size: 39px !important;
             text-transform: uppercase;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
         }
 
         p {
             font-size: 20px;
-            margin-bottom: 40px;
+            margin-bottom: 46px;
+            font-weight: 300;
         }
     }
 
-    .box-list {
-        font-size: 20px;
+    .box-links {
+        max-width: 400px;
 
-        .title {
-            //font-family: @font-bold;
-            line-height: 54px !important;
-            text-transform: uppercase;
-        }
+        .box-list {
+            font-size: 20px;
 
-        li {
-            line-height: 40px;
-        }
+            .title {
+                //font-family: @font-bold;
+                line-height: 54px !important;
+                text-transform: uppercase;
+                font-weight: bold;
+            }
 
-        a {
-            display: block;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-    }
+            li {
+                line-height: 40px;
+            }
 
-    .box-websites {
-        .flex {
-            height: 58px;
-            line-height: 58px;
-
-            img {
-                display: inline-block;
-                max-height: 58px;
-                vertical-align: middle;
+            a {
+                display: block;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
         }
     }
 
     .list-social-links {
-        margin: 20px 0 0;
-
-        li {
-            display: inline-block;
-            width: 18%;
-        }
-
+        max-width: 420px;
+        margin: 20px 0 0 auto;
         a {
             color: @color-white;
             font-size: 32px;
@@ -943,121 +992,10 @@
         }
     }
 
-    @media screen and (max-width: 640px) {
+
+    @media screen and (max-width: 600px) {
         .container {
-            padding: 0 14px;
-        }
-
-        .box-tutors,
-        .box-jobs,
-        .box-textbooks,
-        .box-class-materials {
-            padding: 0;
-
-            p {
-                padding: 0 15px;
-            }
-
-            .img {
-                margin: 0 15px;
-            }
-        }
-        /*.box-search {
-            background: transparent;
-            padding: 0;
-
-            input[type="text"] {
-                width: 100%;
-            }
-
-            button[type="submit"] {
-                display: none;
-            }
-
-            .demo-icon-mic {
-                right: 20px;
-                top: 0;
-            }
-        }*/
-    }
-    /*.animenu__toggle {
-    background: transparent;
-    display: none;
-    cursor: pointer;
-    border: 0;
-    padding: 10px;
-    height: 40px;
-    width: 40px;
-
-    &:hover {
-    }
-}*/
-    /*.animenu__toggle__bar {
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #fff;
-    transition: .15s cubic-bezier(0.75, -0.55, 0.25, 1.55);
-
-    & + .animenu__toggle__bar {
-        margin-top: 4px;
-    }
-}
-
-.animenu__toggle--active {
-    .animenu__toggle__bar {
-        margin: 0;
-        position: absolute;
-
-        &:nth-child(1) {
-            transform: rotate(45deg);
-        }
-
-        &:nth-child(2) {
-            opacity: 0;
-        }
-
-        &:nth-child(3) {
-            transform: rotate(-45deg);
-        }
-    }
-}*/
-    // Clear some defaults
-    @media screen and (max-width: 769px) {
-        .box-header {
-            padding-bottom: 44px;
-
-            header {
-                //position: relative;
-                // z-index: 10;
-                nav {
-                    a {
-                        display: block;
-                        padding-right: 34px;
-                        text-overflow: ellipsis;
-                        overflow: hidden;
-                        white-space: nowrap;
-                    }
-                }
-
-                .sm9,
-                .sm3 {
-                    width: 100%;
-                }
-            }
-
-            .box-inner-header {
-                .title {
-                    //font-family: @font-regular;
-                    font-size: 26px !important;
-                    line-height: normal !important;
-                    margin: 34px 0 0;
-                }
-
-                .sub-title {
-                    font-size: 20px;
-                }
-            }
+            padding: 0 16px;
         }
     }
 }
