Fixes in job api

--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -63,6 +63,9 @@
                 padding: 8px 4px;
                 font-weight: bold;
                 border-bottom: 1px solid;
+                border-top: 0;
+                border-left: 0;
+                border-right: 0;
                 border-image: @border-bg-image;
                 text-transform: capitalize;
 
