--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -1,5 +1,12 @@
 @import "../../mixin.less";
 
+.sort-filter-wrap {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 74px;
+
+
+}
 ﻿.sort-switch {
     background: linear-gradient(102deg, #3023ae, #3293f6);
     display: flex;
