--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -3,7 +3,7 @@
 .features {
     color: white;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 118px;
 
     @media(max-width: 600px) {
         margin-top: 16px;
@@ -88,6 +88,10 @@
 
         h3, p {
             font-size: inherit;
+        }
+
+        p {
+            font-weight: 100;
         }
     }
 }
