--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -172,14 +172,15 @@
                 }
             }
 
-            .course, .add-course-btn, .add-course-form {
+            .course, .add-course-form {
                 width: 136px;
                 border-radius: 4px;
                 overflow: hidden;
                 height: 144px;
             }
 
-            .add-course-btn, .add-course-form {
+
+            .add-course-form {
                 color: white;
                 font-weight: 100;
                 border: 1px solid white;
@@ -201,41 +202,51 @@
                 }
             }
 
-            .add-course-btn {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-around;
-                text-transform: uppercase;
-                padding: 30px 0;
+            .add-course-form {
+                width: 280px;
 
-                svg {
-                    fill: white;
-                    width: 32px;
-                    height: 32px;
-                }
-            }
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: stretch;
+                    height: 100%;
 
-            .add-course-form form {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: stretch;
-                height: 100%;
+                    .form-title {
+                        font-size: 16px;
+                        padding-bottom: 10px;
+                    }
 
-                button {
-                    margin: 0;
-                    background: @color-blue;
-                    color: white;
-                    height: 24px;
-                }
 
-                .input-group {
-                    padding: 0;
-                }
+                    .input-group {
+                        padding: 0;
+                    }
 
-                .input-group__input {
-                    align-items: flex-end;
+                    .input-group__input {
+                        align-items: flex-end;
+                    }
+
+                    input {
+                        font-size: 14px;
+                    }
+
+                    .actions {
+                        display: flex;
+                        justify-content: space-between;
+
+                        button {
+                            width: ~"calc(50% - 8px)";
+                            margin: 0;
+                            background: @color-blue;
+                            color: white;
+                            height: 24px;
+                        }
+
+                        .btn.btn--disabled:not(.btn--icon):not(.btn--flat) {
+                            background-color: #bbbbbb !important;
+                            color: white !important;
+                        }
+                    }
                 }
             }
         }
@@ -252,5 +263,3 @@
         filter: blur(20px);
     }
 }
-
-
