--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -165,10 +165,13 @@
                 color: #fff;
                 font-size: 12px;
 
-                img {
-                    width: 100%;
+                .image {
                     height: 96px;
+                    width: 96px;
                     background-color: white;
+                    background-size: contain;
+                    background-position: center;
+                    margin-bottom: 4px;
                 }
             }
 
