--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -1,18 +1,18 @@
 @import "../../mixin.less";
 
 .sort-filter-wrap {
-     position: -webkit-sticky;
-     position: sticky;
-     top: 74px;
-    
+    position: -webkit-sticky;
+    position: sticky;
+    top: 74px;
 }
+
 ﻿.sort-switch {
     background: linear-gradient(102deg, #3023ae, #3293f6);
     display: flex;
     align-items: stretch;
     border-radius: 4px;
     padding: 3px;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
     text-transform: capitalize;
 
 
@@ -66,7 +66,7 @@
             border: none;
 
             .expansion-panel__header {
-                padding: 8px 4px;
+                padding: 9px 4px;
                 font-weight: bold;
                 border-bottom: 1px solid;
                 border-top: 0;
@@ -77,7 +77,8 @@
 
                 i.icon {
                     font-size: 8px;
-                    color: @color-dark-blue
+                    color: @color-dark-blue;
+                    margin-right: 4px;
                 }
             }
 
