--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -182,13 +182,6 @@
                 height: 144px;
             }
 
-
-            .add-course-form {
-                color: white;
-                font-weight: 100;
-                border: 1px solid white;
-            }
-
             .course {
 
                 .code {
@@ -207,6 +200,9 @@
 
             .add-course-form {
                 width: 280px;
+                color: white;
+                font-weight: 100;
+                border: 1px solid white;
 
                 form {
                     display: flex;
@@ -240,9 +236,16 @@
                         button {
                             width: ~"calc(50% - 8px)";
                             margin: 0;
-                            background: @color-blue;
                             color: white;
                             height: 24px;
+
+                            &.save {
+                                background: @color-blue;
+                            }
+
+                            &.clear {
+                                background: #9b9b9b;
+                            }
                         }
 
                         .btn.btn--disabled:not(.btn--icon):not(.btn--flat) {
