--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -1,8 +1,8 @@
 ﻿@import "../../mixin.less";
 
-.wrap {
-    margin-top: 2%;
-}
+//.wrap {
+    //margin-top: 2%;
+//}
 
 .p-result {
     background: #eeeeee;
