--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -71,6 +71,10 @@
                 color: white;
             }
         }
+
+        .search-b {
+            border-radius:4px;
+        }
     }
 
     .d-wrapper {
@@ -112,8 +116,7 @@
                     }
                 }
             }
-
-            .first-time-message {
+            /*.first-time-message {
                 width: 100%;
                 border: 1px solid white;
                 border-radius: 2px;
@@ -149,7 +152,7 @@
                         height: 12px;
                     }
                 }
-            }
+            }*/
         }
 
         .results-container {
@@ -164,14 +167,17 @@
                 text-align: center;
                 color: #fff;
                 font-size: 12px;
+                line-height: 1.17;
+                letter-spacing: -0.5px;
 
                 .image {
+                    border-radius: 4px;
+                    overflow: hidden;
                     height: 96px;
                     width: 96px;
                     background-color: white;
                     background-size: contain;
                     background-position: center;
-                    margin-bottom: 4px;
                 }
             }
 
