Tutor now have Description

--- a/Cloudents.Web/ClientApp/components/results/ResultTutor.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultTutor.less
@@ -13,6 +13,9 @@ a {
     letter-spacing: -0.4px;
     color: @Tutors;
 }
+.avatar  {
+    .flexSameSize();
+}
 .price {
     font-size: 17px;
     letter-spacing: -0.4px;
@@ -22,4 +25,12 @@ a {
     font-size: 11px;
     letter-spacing: -0.3px;
     color: @Feed-Date;
+}
+.description {
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.3px;
+    color: @Book-Info;
+    height: 38px;
+    overflow: hidden;
 }
