--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -33,6 +33,12 @@
     &.documents { // Study documents
         background-image: linear-gradient(to bottom, rgba(38,0,75,0.2), rgba(249,249,249,0.2));
 
+        .strip-title svg {
+            width: 41px;
+            height: auto;
+            fill: @color-dark-purple;
+        }
+
         .floating-icons svg {
             fill: @color-dark-purple;
         }
@@ -77,6 +83,12 @@
     &.tutors { // Tutors
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2) 10%, rgba(82,171,21,0.2) 98%);
 
+        .strip-title svg {
+            width: 58px;
+            height: auto;
+            fill: @color-green;
+        }
+
         .floating-icons svg {
             fill: @color-green;
         }
@@ -120,6 +132,12 @@
 
     &.food-deals { // Food and Deals
         background-image: linear-gradient(to bottom, rgba(44,191,165,0.2), rgba(249,249,249,0.2));
+
+        .strip-title svg {
+            width: 52px;
+            height: auto;
+            fill: @Food;
+        }
 
         .floating-icons svg {
             fill: #2CBFA5;
@@ -166,6 +184,12 @@
     &.textbooks { // Textbooks
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2), rgba(140,63,191,0.2));
 
+        .strip-title svg {
+            width: 66px;
+            height: auto;
+            fill: @Textbooks;
+        }
+
         .floating-icons svg {
             fill: @color-purple;
         }
@@ -209,6 +233,12 @@
 
     &.flashcards { // Flashcards
         background-image: linear-gradient(to bottom, rgba(241,77,77,0.2), rgba(249,249,249,0.2));
+
+        .strip-title svg {
+            width: 62px;
+            height: auto;
+            fill: @Flashcards;
+        }
 
         .floating-icons svg {
             fill: #F14D4D;
@@ -254,6 +284,12 @@
     &.ask-question { // Ask a Question
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2), rgba(4,85,168,0.2));
 
+        .strip-title svg {
+            width: 64px;
+            height: auto;
+            fill: @Ask-a-Question;
+        }
+
         .floating-icons svg {
             fill: @color-dark-blue;
         }
@@ -297,6 +333,12 @@
 
     &.jobs { // Jobs
         background-image: linear-gradient(to bottom, rgba(245,166,35,0.2), rgba(249,249,249,0.2));
+
+        .strip-title svg {
+            width: 32px;
+            height: auto;
+            fill: @Jobs;
+        }
 
         .floating-icons svg {
             fill: @color-orange;
