--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -8,4 +8,14 @@
 
 @section scripts {
     <script src="~/dist/main.js" asp-append-version="true"></script>
+    <environment include="Development">
+        <script src="~/dist/main.js" asp-append-version="true"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="//spitball.azureedge.net/dist/main.js"
+                asp-append-version="true"
+                asp-fallback-src="~/dist/main.js"
+                asp-fallback-test="window.mainCdn">
+        </script>
+    </environment>
 }
