--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -17,11 +17,27 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <base href="~/" />
-    
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
-    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    @* <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
+    <environment include="Development">
+        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    </environment>
+
     <environment exclude="Development">
-        <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="//spitball.azureedge.net/dist/vendor.css"
+              asp-fallback-href="~/dist/vendor.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"
+              asp-append-version="true" />
+
+        <link rel="stylesheet" href="//spitball.azureedge.net/dist/site.css"
+              asp-fallback-href="~/dist/site.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"
+              asp-append-version="true" />
+
+
+        @*<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true"/>
+            <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true"/>*@
     </environment>
 
     <meta charset="utf-8">
@@ -39,11 +55,11 @@
     <meta property="og:image" name="og:image" content="@ViewBag.fbImage" />
     <meta property="og:description" name="og:description" content="@ViewBag.metaDescription" />
     <meta property="og:title" name="og:title" content="@ViewBag.title" />
-    <meta property="og:url" content="https://www.spitball.co/@Context.Request.Path" />
+    <meta property="og:url" content="https://www.spitball.co@Context.Request.Path" />
     <meta property="og:type" content="website" />
     <link href="https://plus.google.com/116999550356569810034" rel="publisher" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="Images/favIcons/favicon_114.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favIcons/favicon_114.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="images/favIcons/favicon_57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/favicon_60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/favicon_72.png">
@@ -63,9 +79,20 @@
     <div>
         @RenderBody()
     </div>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script src="~/dist/vendor.js" asp-append-version="true"></script>
-    <script>
+    <environment include="Development">
+        <script src="~/dist/vendor.js" asp-append-version="true"></script>
+    </environment>
+
+    <environment exclude="Development">
+        <script src="//spitball.azureedge.net/dist/vendor.js"
+                asp-append-version="true"
+                asp-fallback-src="~/dist/vendor.js"
+                asp-fallback-test="window.vendor">
+            
+        </script>
+    </environment>
+
+    <script async>
         (function () {
             var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else {
                 var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() {
@@ -77,8 +104,10 @@
             Intercom('boot', { app_id: 'njmpgayv' })
         })()
     </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-    window.version = '@Assembly.GetEntryAssembly().GetName().Version.ToString(3)';
+
+        window.version = '@Assembly.GetEntryAssembly().GetName().Version.ToString(3)';
     </script>
     @await RenderSectionAsync("scripts", required: false).ConfigureAwait(false)
 </body>
