moved colors from home page consts.js file to the css, implemented add course button design in results filter, fixed coursor to pointer in uni and course search.

--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -51,6 +51,27 @@
         }
     }
 
+    .add-course {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        color: @color-blue;
+
+        svg {
+            fill: @color-blue;
+            width: 12px;
+            height: 12px;
+        }
+
+        span {
+            margin-left: 8px
+        }
+
+        &:focus {
+            outline: none;
+        }
+    }
+
     .expansion-panel {
         @border-bg-image: linear-gradient(to right, #3023ae, #3293f6) 10;
 
