--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -33,10 +33,12 @@
     &.documents { // Study documents
         background-image: linear-gradient(to bottom, rgba(38,0,75,0.2), rgba(249,249,249,0.2));
 
-        .strip-title svg {
-            width: 41px;
-            height: auto;
-            fill: @color-dark-purple;
+        .strip-title {
+            svg {
+                width: 41px;
+                height: auto;
+                fill: @color-dark-purple;
+            }
         }
 
         .floating-icons svg {
@@ -83,11 +85,18 @@
     &.tutors { // Tutors
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2) 10%, rgba(82,171,21,0.2) 98%);
 
-        .strip-title svg {
-            width: 58px;
-            height: auto;
-            fill: @color-green;
+        .strip-title {
+            svg {
+                width: 58px;
+                height: auto;
+                fill: @color-green;
+            }
+
+            .title-text {
+                color: @color-green;
+            }
         }
+
 
         .floating-icons svg {
             fill: @color-green;
@@ -133,10 +142,16 @@
     &.food-deals { // Food and Deals
         background-image: linear-gradient(to bottom, rgba(44,191,165,0.2), rgba(249,249,249,0.2));
 
-        .strip-title svg {
-            width: 52px;
-            height: auto;
-            fill: @Food;
+        .strip-title {
+            svg {
+                width: 52px;
+                height: auto;
+                fill: @Food;
+            }
+
+            .title-text {
+                color: @Food;
+            }
         }
 
         .floating-icons svg {
@@ -184,10 +199,16 @@
     &.textbooks { // Textbooks
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2), rgba(140,63,191,0.2));
 
-        .strip-title svg {
-            width: 66px;
-            height: auto;
-            fill: @Textbooks;
+        .strip-title {
+            svg {
+                width: 66px;
+                height: auto;
+                fill: @Textbooks;
+            }
+
+            .title-text {
+                color: @Textbooks;
+            }
         }
 
         .floating-icons svg {
@@ -234,10 +255,16 @@
     &.flashcards { // Flashcards
         background-image: linear-gradient(to bottom, rgba(241,77,77,0.2), rgba(249,249,249,0.2));
 
-        .strip-title svg {
-            width: 62px;
-            height: auto;
-            fill: @Flashcards;
+        .strip-title {
+            svg {
+                width: 62px;
+                height: auto;
+                fill: @Flashcards;
+            }
+
+            .title-text {
+                color: @Flashcards;
+            }
         }
 
         .floating-icons svg {
@@ -284,10 +311,16 @@
     &.ask-question { // Ask a Question
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2), rgba(4,85,168,0.2));
 
-        .strip-title svg {
-            width: 64px;
-            height: auto;
-            fill: @Ask-a-Question;
+        .strip-title {
+            svg {
+                width: 64px;
+                height: auto;
+                fill: @Ask-a-Question;
+            }
+
+            .title-text {
+                color: @Ask-a-Question;
+            }
         }
 
         .floating-icons svg {
@@ -334,10 +367,16 @@
     &.jobs { // Jobs
         background-image: linear-gradient(to bottom, rgba(245,166,35,0.2), rgba(249,249,249,0.2));
 
-        .strip-title svg {
-            width: 32px;
-            height: auto;
-            fill: @Jobs;
+        .strip-title {
+            svg {
+                width: 32px;
+                height: auto;
+                fill: @Jobs;
+            }
+
+            .title-text {
+                color: @Jobs;
+            }
         }
 
         .floating-icons svg {
