--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -73,7 +73,7 @@
         }
 
         .search-b {
-            border-radius:4px;
+            border-radius: 4px;
         }
     }
 
@@ -162,6 +162,9 @@
                 flex-grow: 0;
             }
 
+            .uni, .course{
+            cursor: pointer;
+            }
             .uni {
                 width: 96px;
                 text-align: center;
