fixed general page height

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -1,11 +1,14 @@
 ﻿@import "../../mixin.less";
 
 //.wrap {
-    //margin-top: 2%;
+//margin-top: 2%;
 //}
+.general-page {
+    background: #eeeeee;
+    min-height: 100vh;
+}
 
 .p-result {
-    background: #eeeeee;
 
     .first-grid {
         width: 230px;
