--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -3,11 +3,9 @@
 //.wrap {
 //margin-top: 2%;
 //}
-.general-page {
+.application--wrap {
     background: #eeeeee;
-    min-height: 100vh;
 }
-
 .p-result {
 
     .first-grid {
