fixed verticals design

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -9,7 +9,7 @@
 .p-result {
 
     .first-grid {
-        width: 230px;
+        width: @resultsFilterWidth;
         .flexSameSize();
         padding: 0 50px 0 20px;
     }
