--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -135,3 +135,9 @@
     flex-grow: 0;
     flex-shrink: 0;
 }
+
+
+// Size constants
+@navBarHeightDesktop: 72px;
+@navBarHeightMobile: 96px;
+@resultsFilterWidth: 230px;
