--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -157,10 +157,8 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background:none;
 }
 
-.ram-this {
-    font-size:large;
-    background:red;
-    color:red;
+.cdn-only {
+    position:absolute;
 }
 /*abbr[title] {
     border-bottom: 1px dotted;
