--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -1,18 +1,19 @@
-﻿@{
+﻿@using System.Reflection
+@{
     ViewBag.Title = "Spitball";
     Layout = "_Layout";
+    var version = @Assembly.GetEntryAssembly().GetName().Version.ToString(4);
 }
 
 <div id="app">Loading....</div>
 
 
 @section scripts {
-    <script src="~/dist/main.js" asp-append-version="true"></script>
     <environment include="Development">
         <script src="~/dist/main.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-        <script src="//spitball.azureedge.net/dist/main.js"
+        <script src="//spitball.azureedge.net/dist/main.js?v=@version"
                 asp-append-version="true"
                 asp-fallback-src="~/dist/main.js"
                 asp-fallback-test="window.mainCdn">
