--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     ViewBag.metaDescription = ViewBag.metaDescription ?? "Join the social studying revolution at Spitball";
     ViewBag.fbImage = ViewBag.fbImage ?? "/images/3rdParty/fbShare.png";
     ViewBag.imageSrc = ViewBag.imageSrc ?? "/images/3rdParty/fbShare.png";
+    var version = Assembly.GetEntryAssembly().GetName().Version.ToString(4);
 
 }
 <!DOCTYPE html>
@@ -23,23 +24,18 @@
     </environment>
 
     <environment exclude="Development">
-        <link rel="stylesheet" href="//spitball.azureedge.net/dist/vendor.css"
+        <link rel="stylesheet" href="//spitball.azureedge.net/dist/vendor.css?v=@version"
               asp-fallback-href="~/dist/vendor.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+              asp-fallback-test-class="cdn-only" asp-fallback-test-property="position"
               asp-fallback-test-value="absolute"
               asp-append-version="true" />
 
         <link rel="stylesheet" href="//spitball.azureedge.net/dist/site.css"
               asp-fallback-href="~/dist/site.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+              asp-fallback-test-class="cdn-only2" asp-fallback-test-property="position"
               asp-fallback-test-value="absolute"
               asp-append-version="true" />
-
-
-        @*<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true"/>
-            <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true"/>*@
     </environment>
-
     <meta charset="utf-8">
     <meta name="theme-color" content="@themeColor">
     <meta name="msapplication-navbutton-color" content="@themeColor">
@@ -59,38 +55,40 @@
     <meta property="og:type" content="website" />
     <link href="https://plus.google.com/116999550356569810034" rel="publisher" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favIcons/favicon_114.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favIcons/favicon_57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/favicon_60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/favicon_72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/favicon_76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/favicon_114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/favicon_120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicons/favicon_144.png">
-    <link rel="icon" type="image/png" href="images/favicons/favicon_32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/favicons/favicon_96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="images/favicons/favicon_16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="57x57" href="//spitball.azureedge.net/images/favIcons/favicon_114.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="//spitball.azureedge.net/images/favIcons/favicon_57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="//spitball.azureedge.net/images/favicons/favicon_60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="//spitball.azureedge.net/images/favicons/favicon_72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="//spitball.azureedge.net/images/favicons/favicon_76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="//spitball.azureedge.net/images/favicons/favicon_114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="//spitball.azureedge.net/images/favicons/favicon_120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="//spitball.azureedge.net/images/favicons/favicon_144.png">
+    <link rel="icon" type="image/png" href="//spitball.azureedge.net/images/favicons/favicon_32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="//spitball.azureedge.net/images/favicons/favicon_96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="//spitball.azureedge.net/images/favicons/favicon_16.png" sizes="16x16">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
-    <link rel="SHORTCUT ICON" href="~/favicon.ico" />
+    <meta name="msapplication-TileImage" content="//spitball.azureedge.net/images/favicons/mstile-144x144.png">
+    <link rel="SHORTCUT ICON" href="//spitball.azureedge.net/favicon.ico" />
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
     <div>
         @RenderBody()
     </div>
+    <div class="cdn-only"></div>
+    <div class="cdn-only2"></div>
     <environment include="Development">
         <script src="~/dist/vendor.js" asp-append-version="true"></script>
     </environment>
 
     <environment exclude="Development">
-        <script src="//spitball.azureedge.net/dist/vendor.js"
+        <script src="//spitball.azureedge.net/dist/vendor.js?v=@version"
                 asp-append-version="true"
                 asp-fallback-src="~/dist/vendor.js"
                 asp-fallback-test="window.vendor">
-            
         </script>
     </environment>
+
 
     <script async>
         (function () {
@@ -107,7 +105,7 @@
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
 
-        window.version = '@Assembly.GetEntryAssembly().GetName().Version.ToString(3)';
+        window.version = '@version';
     </script>
     @await RenderSectionAsync("scripts", required: false).ConfigureAwait(false)
 </body>
