--- a/Cloudents.Web/ClientApp/components/results/suggestCard.less
+++ b/Cloudents.Web/ClientApp/components/results/suggestCard.less
@@ -3,7 +3,7 @@
 .logo-wrap {
     width: 64px;
     height: 64px;
-    background: #000;
+    background: linear-gradient(328deg,#3293f6, #3023ae);
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -17,6 +17,9 @@
 
 svg {
     height: 28px;
+
+        fill: white !important;
+    
 }
 
 .text {
