--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -3,8 +3,12 @@
 //.wrap {
     //margin-top: 2%;
 //}
-
-.p-result {
+.navigation-bar  {
+    position:-webkit-sticky;
+    position:sticky;
+    top:70px;
+    background:#eee;
+}.p-result {
     background: #eeeeee;
 
     .first-grid {
