--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
               asp-fallback-test-value="absolute"
               asp-append-version="true" />
 
-        <link rel="stylesheet" href="//spitball.azureedge.net/dist/site.css"
+        <link rel="stylesheet" href="//spitball.azureedge.net/dist/site.css?v=@version"
               asp-fallback-href="~/dist/site.css"
               asp-fallback-test-class="cdn-only2" asp-fallback-test-property="position"
               asp-fallback-test-value="absolute"
