small fixes in results

--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -9,6 +9,13 @@
     .giveMeEllipsisOne();
     max-width: ~"calc(100% - 5px)";
 
+    &.text-note {
+        color: @color-dark-purple;
+    }
+
+    &.text-flashcard {
+        color: @Flashcards;
+    }
     //.giveMeEllipsis(1,1.14);
     //margin-right: 40px;
 }
